fix scrollbar disappearing, ManageDecks content area not growing to fill viewport

--- a/frontend-next/styles/globals.css
+++ b/frontend-next/styles/globals.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 .DraftEditor-root {
   flex-grow: 1;
   cursor: text;
